# vunotrader

./: .gitattributes  .gitignore  README.md  VunoScreener_v3.mq5  VunoTrader_v2.ex5  VunoTrader_v2.mq5  brain-requirements.txt  brain.env.example  brain_model_gb.pkl  brain_model_rf.pkl  brain_model_scaler.pkl  phase1_cycle_err.txt  phase1_probe_json.txt  phase1_probe_out.txt  phase2_help_out.txt  render.yaml  retrain_pipeline.py  study_ingest_worker.py  vunotrader_brain.py
robovuno26/: .gitignore  README.md  projeto.md.txt  pyproject.toml
robovuno26/agent-local/: config.example.json  run-agent.ps1
robovuno26/backend/: .env.example  backup-db.ps1  install.ps1  migrate.ps1  register-backup-task.ps1  requirements-dev.txt  requirements.txt  run-server.ps1  run-tests.ps1
robovuno26/dados/: BTCUSDT_1min.csv
robovuno26/evolucao/: 2026-04-02-config-env-supabase.md  2026-04-02-corte-tecnico-base-atual.md  2026-04-02-dashboard-seguranca-e2e-demo.md  2026-04-02-fase1-tenant-heartbeat.md  2026-04-02-frontend-operacional-bootstrap.md  2026-04-02-mvp-agente-remoto-mt5-saas.md  2026-04-02-parametros-monitoramento-mt5-real.md  2026-04-02-refatoracao-mt5-bridge-modular.md  2026-04-03-analise-sistema-importado-robotrademeta5.md  2026-04-03-bloco-2-producao-observabilidade.md  2026-04-03-bloco-3-banco-migracoes-backup.md  2026-04-03-bloco-4-qualidade-e-ci.md  2026-04-03-cooldown-reentrada-mt5.md  2026-04-03-correcao-migrations-legado-backend.md  2026-04-03-descoberta-mt5-e-setup-por-instancia.md  2026-04-03-etapa1-snapshot-ohlc-vpe.md  2026-04-03-etapa2-modulos-price-action.md  (+15 more)
(+412 files in other folders)
